# flask-on-docker

./: .env.dev.db  .env.prod  .env.prod.db  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-package.yml
services/nginx/: Dockerfile  nginx.conf
services/realtime/: realtime_ultra.html  register-runners.html
services/realtime/Leaflet.EasyButton/src/: easy-button.css
services/realtime/Leaflet.FileLayer/docs/: index.html  index.js  (+2 more)
services/realtime/css/: real_time.css
services/realtime/js/: maps.js  register-runners.js  ultra_realtime.js
services/realtime/leaflet-dynamic-elevation/: index.js
services/realtime/leaflet-elevation-raruto/: leaflet-elevation.css  leaflet-elevation.js  leaflet-elevation.min.css  leaflet-elevation.min.js
services/web/: Dockerfile  Dockerfile.prod  auth.py  db_setup.py  entrypoint.sh  manage.py  models.py  requirements-dev.txt  requirements.txt  tables.py
services/web/process_data/: ciucas_route.geojson  get_distance.py  insert_json_to_postgres.py  leaflet-realtime.html  new_ultra_panta.geojson  new_updated_ciucas.json  route_test.json  runner_test.json  runners.geojson  sqalchemy_insert_to_postgres.py  test2_ciucas_gpx.geojson  test_sqlalchemy.py  trim_json.py  trim_runners.json  updated_ciucas.json
services/web/project/: __init__.py  app_factory.py  auth.py  config.py  db_setup.py  forms.py  get_data_from_postgresql.py  helper.py  insert_json_to_postgres.py  models.py  routes.py  tables.py
(+22 files in other folders)
