[metadata]
name = flask-on-docker
description = FlaskAPI in Docker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/corinat/flask-on-docker
author = ""
author_email = ""
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
zip_safe = False

[options]
packages = find:
install_requires =
    Flask~=3.0.0
python_requires = >=3.11
include_package_data = True
use_scm_version = True

[aliases]
release = sdist bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
max-complexity = 10
